<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">


    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:hint="@string/name"
                android:padding="8dp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:hint="@string/email"
                android:padding="8dp" />

            <EditText
                android:id="@+id/reg_mobile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/baseline_phone_iphone_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:hint="@string/mobile_number"
                android:padding="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/grey_font">

                <EditText
                    android:id="@+id/reg_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/blue_border"
                    android:drawableStart="@drawable/baseline_password_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:textColorHint="@color/grey_font"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/grey_font">

                <EditText
                    android:id="@+id/pwd_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/blue_border"
                    android:drawableStart="@drawable/baseline_password_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_font"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:text="* Minimum one Lowercase"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/txtLower"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:text="* Minimum one uppercase"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/txtUpper"/>

            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="* Minimum one number"
                android:textColor="@color/purple_500"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:text="* At least 8 characters"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/txtChar"/>

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/register_now"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>